KNOX-3418: Fix jdk17 -> jdk11 compilation fails